--- a/test/Main.xaml
+++ b/test/Main.xaml
@@ -16,7 +16,7 @@
 			<RowDefinition Height="12*"/>
 		</Grid.RowDefinitions>
 		<Label Content="Połączenie z bazą danych:" Padding="5" HorizontalAlignment="Left" Height="33" Margin="10,10,0,0" VerticalAlignment="Top" Width="156" FontFamily="Maiandra GD"/>
-		<TextBlock x:Name="TextPolBaza" Padding="5" HorizontalAlignment="Left" Height="26.088" Margin="171,10,0,0" TextWrapping="Wrap" Text="Nie" VerticalAlignment="Top" Width="37.333" FontFamily="Maiandra GD"/>
+		<TextBlock x:Name="TextPolBaza" Padding="5" HorizontalAlignment="Left" Height="26.088" Margin="171,10,0,0" TextWrapping="Wrap" Text="teks" VerticalAlignment="Top" Width="37.333" FontFamily="Maiandra GD"/>
 		<Button x:Name="buttonPolBaza" Content="konfiguruj" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="96" Margin="223.666,10,0,0" Click="buttonPolBaza_Click" FontFamily="Maiandra GD" Background="White" BorderBrush="Black"/>
 		<Grid x:Name="L" Grid.Column="0" Grid.Row="1">
 			<Grid.RowDefinitions>
@@ -42,7 +42,7 @@
 			<Button x:Name="buttonGenerujTest" Content="generuj" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="96" Margin="511.666,249.154,0,0" Click="buttonGenerujTest_Click" FontFamily="Maiandra GD" Background="White" BorderBrush="Black" RenderTransformOrigin="0.66,2.783"/>
 			<Label HorizontalContentAlignment="Right" Padding="5" Content="Nazwa testu:" HorizontalAlignment="Left" Height="25" Margin="84,79.154,0,0" VerticalAlignment="Top" Width="110" FontFamily="Maiandra GD" Grid.Row="1"/>
 			<TextBox x:Name="TextNazwaTestuPob" Padding="5" HorizontalAlignment="Left" Height="25" Margin="214,76.757,0,0" TextWrapping="Wrap" Text="Nazwa" VerticalAlignment="Top" Width="146" Grid.Row="1"/>
-			<Button x:Name="buttonPobierzTesty" Content="generuj" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="96" Margin="382.666,78.757,0,0" Click="buttonPobierzTesty_Click" FontFamily="Maiandra GD" Background="White" BorderBrush="Black" RenderTransformOrigin="0.66,2.783" Grid.Row="1"/>
+			<Button x:Name="buttonPobierzTesty" Content="pobierz" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="96" Margin="382.666,78.757,0,0" Click="buttonPobierzTesty_Click" FontFamily="Maiandra GD" Background="White" BorderBrush="Black" RenderTransformOrigin="0.66,2.783" Grid.Row="1"/>
 			<Label HorizontalContentAlignment="Right" Padding="5" Content="Ilość testów:" HorizontalAlignment="Left" Height="25" Margin="84,128.154,0,0" VerticalAlignment="Top" Width="110" FontFamily="Maiandra GD" Grid.Row="1"/>
 			<TextBlock HorizontalAlignment="Left" Height="19.292" Margin="214,131.758,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="114"/>
 			<Button x:Name="buttonSprawdz" Content="sprawdź" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="96" Margin="382.666,128.05,0,0" Click="buttonSprawdz_Click" FontFamily="Maiandra GD" Background="White" BorderBrush="Black" RenderTransformOrigin="0.66,2.783" Grid.Row="1"/>
