--- a/test/Main2.xaml
+++ b/test/Main2.xaml
@@ -3,64 +3,94 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:test"
+        xmlns:converter="clr-namespace:test"
         mc:Ignorable="d"
         Title="TestGenerator" Height="900" Width="1600" WindowState="Maximized" Background="White">
-    <Grid>
+	<Window.Resources>
+		<converter:BoolVisibilityConverter x:Key="BoolVisibilityConverter"/>
+	</Window.Resources>
+	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="1*"/>
 			<RowDefinition Height="10*"/>
 		</Grid.RowDefinitions>
 		<Grid x:Name="Top" Grid.Row="0">
-			<WrapPanel>
-				<TextBox Text="Połączenie z bazą danych:" Margin="10" Padding="5"/>
-				<TextBox x:Name="TextPolBaza" Text="brak połączenia" Margin="10" Padding="5"/>
-				<ToggleButton x:Name="buttonPolBaza" IsChecked="{Binding ElementName=PopBaza, Path=IsOpen}" Content="konfiguruj połączenie" Margin="10" Padding="5" Click="buttonPolBaza_Click"/>
-				<Popup x:Name="PopBaza" AllowsTransparency="True" PlacementTarget="{Binding ElementName=buttonPolBaza}" Placement="Left">
-					<WrapPanel>
-						<Label Content="login:" Margin="10" Padding="5"/>
-						<TextBox x:Name="TextBLogin" MinWidth="100" Margin="10" Padding="5"/>
-						<Label Content="hasło:" Margin="10" Padding="5"/>
-						<PasswordBox x:Name="BPassword" MinWidth="100" Margin="10" Padding="5"/>
-						<Label Content="źródło:" Margin="10" Padding="5"/>
-						<TextBox x:Name="BSource" MinWidth="100" Margin="10" Padding="5"/>
-						<Button x:Name="buttonBPolacz" Content="połącz z bazą" Margin="10" Padding="5"/>
-					</WrapPanel>
-				</Popup>
-			</WrapPanel>
+			<StackPanel>
+				<WrapPanel>
+					<Label Content="zalogowany:" Padding="5" Margin="10,10,0,0"/>
+					<TextBlock x:Name="zalogowany" Padding="5" Margin="0,10,10,0" Text="konto publiczne"/>
+				</WrapPanel>
+				<WrapPanel>
+					<Label Content="Połączenie z bazą danych:" Margin="10,10,-3,10" Padding="5"/>
+					<Label x:Name="TextPolBaza" Content="brak połączenia" Margin="0,10,10,10" Padding="5"/>
+					<ToggleButton x:Name="buttonPolBaza" IsChecked="{Binding ElementName=PopBaza, Path=IsOpen}" Content="konfiguruj połączenie" Margin="10" Padding="5" Click="buttonPolBaza_Click"/>
+					<Popup x:Name="PopBaza" AllowsTransparency="True" PlacementTarget="{Binding ElementName=buttonPolBaza}" Placement="Left">
+						<WrapPanel>
+							<Label Content="login:" Margin="10,0,0,10" Padding="5"/>
+							<TextBox x:Name="TextBLogin" MinWidth="100" Margin="10,0,10,10" Padding="5"/>
+							<Label Content="hasło:" Margin="10,0,0,10" Padding="5"/>
+							<PasswordBox x:Name="BPassword" MinWidth="100" Margin="10,0,10,10" Padding="5"/>
+							<Label Content="źródło:" Margin="10,0,0,10" Padding="5"/>
+							<TextBox x:Name="BSource" MinWidth="100" Margin="10,0,10,10" Padding="5"/>
+							<Button x:Name="buttonBPolacz" Content="połącz z bazą" Margin="10,0,10,10" Padding="5"/>
+						</WrapPanel>
+					</Popup>
+				</WrapPanel>
+			</StackPanel>
 		</Grid>
 		<Grid Grid.Row="1">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition/>
 				<ColumnDefinition/>
 			</Grid.ColumnDefinitions>
-		<Grid Grid.Column="0">
-			<GroupBox>
-			<StackPanel>
-				<WrapPanel>
-					<Label Content="Nazwa testu:" Margin="10" Padding="5"/>
-					<TextBox x:Name="TextNazwaTestu"  MinWidth="100" Margin="10" Padding="5"/>
-				</WrapPanel>
-				<WrapPanel>
-							<Label Content="Liczba pytań:"  Margin="10" Padding="5"/>
-							<TextBox x:Name="TextLiczbaPytan"  MinWidth="100" Margin="10" Padding="5"/>
-				</WrapPanel>
-				<WrapPanel>
-					<Label Content="Liczba odpowiedzi:"  Margin="10" Padding="5"/>
-					<TextBox x:Name="TextLiczbaOdp"  MinWidth="100" Margin="10" Padding="5"/>
-				</WrapPanel>
-				<WrapPanel>
-					<Label Content="Liczba poprawnych odpowiedzi:"  Margin="10" Padding="5"/>
-					<TextBox x:Name="TextLiczbaPoprOdp"  MinWidth="100" Margin="10" Padding="5"/>
-				</WrapPanel>
-				<WrapPanel>
-					<Label Content="Liczba grup:"  Margin="10" Padding="5"/>
-					<TextBox x:Name="TextLiczbaGrup"  MinWidth="100" Margin="10" Padding="5"/>
-				</WrapPanel>
-
-					</StackPanel>
-			</GroupBox>
-		</Grid>
+			<Grid Grid.Column="0" >
+				<StackPanel>
+					<ToggleButton x:Name="buttonGenerowanie" Content="Generowanie testu" Padding="5" Margin="10,10,10,10"/>
+					<GroupBox x:Name="PopGenerowanie" Visibility="{Binding ElementName=buttonGenerowanie, Path=IsChecked, Converter={StaticResource BoolVisibilityConverter}}" Padding="5" Margin="10">
+						<StackPanel>
+							<WrapPanel>
+								<Label Content="Nazwa testu:" Margin="10" Padding="5" Width="200" HorizontalContentAlignment="Right"/>
+								<TextBox x:Name="TextNazwaTestu"  MinWidth="100" Margin="10" Padding="5"/>
+							</WrapPanel>
+							<WrapPanel>
+								<Label Content="Liczba pytań:"  Margin="10" Padding="5" Width="200" HorizontalContentAlignment="Right"/>
+								<TextBox x:Name="TextLiczbaPytan"  MinWidth="100" Margin="10" Padding="5"/>
+								<Label x:Name="minPytan" Content="1" Padding="5" Margin="10,10,0,10"/>
+								<Slider Value="{Binding ElementName=TextLiczbaPytan, Path=Text}" Padding="5" Margin="0,15,0,10" Width="150" IsSnapToTickEnabled="True" Minimum="{Binding ElementName=minPytan, Path=Content}" Maximum="{Binding ElementName=maxPytan, Path=Content}"/>
+								<Label x:Name="maxPytan" Content="50" Padding="5" Margin="0,10,10,10"/>
+							</WrapPanel>
+							<WrapPanel>
+								<Label Content="Liczba odpowiedzi:"  Margin="10" Padding="5" Width="200" HorizontalContentAlignment="Right"/>
+								<TextBox x:Name="TextLiczbaOdp"  MinWidth="100" Margin="10" Padding="5"/>
+								<Label x:Name="minOdp" Content="2" Padding="5" Margin="10,10,0,10"/>
+								<Slider Value="{Binding ElementName=TextLiczbaOdp, Path=Text}" Padding="5" Margin="0,15,0,10" Width="150" IsSnapToTickEnabled="True" Minimum="{Binding ElementName=minOdp, Path=Content}" Maximum="{Binding ElementName=maxOdp, Path=Content}"/>
+								<Label x:Name="maxOdp" Content="5" Padding="5" Margin="0,10"/>
+							</WrapPanel>
+							<WrapPanel>
+								<Label Content="Liczba poprawnych odpowiedzi:"  Margin="10" Padding="5" Width="200" HorizontalContentAlignment="Right"/>
+								<TextBox x:Name="TextLiczbaPoprOdp"  MinWidth="100" Margin="10" Padding="5"/>
+								<Label x:Name="minPoprOdp" Content="1" Padding="5" Margin="10,10,0,10"/>
+								<Slider Value="{Binding ElementName=TextLiczbaPoprOdp, Path=Text}" Padding="5" Margin="0,15,0,10" Width="150" IsSnapToTickEnabled="True" Minimum="{Binding ElementName=minPoprOdp, Path=Content}" Maximum="{Binding ElementName=maxPoprOdp, Path=Content}"/>
+								<Label x:Name="maxPoprOdp" Content="{Binding ElementName=maxOdp, Path=Content}" Padding="5" Margin="0,10"/>
+							</WrapPanel>
+							<WrapPanel>
+								<Label Content="Liczba grup:"  Margin="10" Padding="5" Width="200" HorizontalContentAlignment="Right"/>
+								<TextBox x:Name="TextLiczbaGrup"  MinWidth="100" Margin="10" Padding="5"/>
+								<Label x:Name="minGrup" Content="1" Padding="5" Margin="10,10,0,10"/>
+								<Slider Value="{Binding ElementName=TextLiczbaGrup, Path=Text}" Padding="5" Margin="0,15,0,10" Width="150" IsSnapToTickEnabled="True" Minimum="{Binding ElementName=minGrup, Path=Content}" Maximum="{Binding ElementName=maxGrup, Path=Content}"/>
+								<Label x:Name="maxGrup" Content="100" Padding="5" Margin="0,10"/>
+							</WrapPanel>
+							<Button x:Name="buttonGenerujTest" Content="Generuj test" Click="buttonGenerujTest_Click" HorizontalAlignment="Right" Margin="10,10,100,10" Padding="5"/>
+						</StackPanel>
+					</GroupBox>
+					<ToggleButton x:Name="buttonSprawdzanie" Content="Sprawdzanie testu" Padding="5" Margin="10,10,10,10" />
+					<GroupBox Visibility="{Binding ElementName=buttonSprawdzanie, Path=IsChecked, Converter={StaticResource BoolVisibilityConverter}}" Padding="5" Margin="10">
+						<StackPanel>
+							<Label Content="dsdsds"/>
+						</StackPanel>
+					</GroupBox>
+				</StackPanel>
+			</Grid>
 		</Grid>
 	</Grid>
 </Window>
