--- a/test/NowyProfil.xaml
+++ b/test/NowyProfil.xaml
@@ -17,15 +17,24 @@
 			<RowDefinition Height="10*" MinHeight="160"></RowDefinition>
 			<RowDefinition Height="0*"></RowDefinition>
 		</Grid.RowDefinitions>
-		<TextBox x:Name="TextNLogin" Padding="4" HorizontalAlignment="Left" Height="25" Margin="108,17,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="158" Grid.Column="1" BorderBrush="Black"/>
-		<Label Content="login:" HorizontalAlignment="Left" Height="25" Margin="48,17,0,0" Grid.Row="1" VerticalAlignment="Top" Width="49" Grid.Column="1" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
-		<Label Content="hasło:" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="48,61,0,0" Grid.Row="1" VerticalAlignment="Top" Width="49" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
-		<Label x:Name="KomNP" Content="" Grid.Column="1" HorizontalAlignment="Center" Height="23" Margin="106,136,95,0" Grid.Row="1" VerticalAlignment="Top" Width="158" FontSize="8" FontFamily="Maiandra GD" Foreground="#FFF90000"/>
-		<Button x:Name="buttonStworzKonto" Content="stwórz konto" Grid.Column="1" HorizontalAlignment="Left" Height="23" Grid.Row="1" VerticalAlignment="Top" Width="96" Margin="138,162,0,0" FontFamily="Maiandra GD" Background="White" Click="buttonStworzKonto_Click" BorderBrush="Black"/>
-		<PasswordBox x:Name="NewPassword" Padding="4" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="108,61,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" BorderBrush="Black"/>
-		<PasswordBox x:Name="NewPassword2" Padding="4" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="108,106,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" BorderBrush="Black"/>
-		<Label Content="powtórz hasło:" HorizontalAlignment="Left" Height="25" Margin="40,106,0,0" Grid.Row="1" VerticalAlignment="Top" Width="109" FontFamily="Maiandra GD" Grid.ColumnSpan="2" HorizontalContentAlignment="Right"/>
-		<Label Content="TestGenerator" Grid.Column="1" HorizontalAlignment="Center" Height="72" VerticalAlignment="Top" Width="340" FontSize="48" HorizontalContentAlignment="Center" FontFamily="Maiandra GD" Margin="10.167,0,9.167,0" Grid.RowSpan="2"/>
-
+		<StackPanel Grid.Column="1" Grid.Row="1">
+			<WrapPanel>
+				<Label Content="login:" Padding="5" Margin="10" Width="100" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
+				<TextBox x:Name="TextNLogin" Padding="5" Margin="0,10,10,10" MinWidth="150" BorderBrush="Black"/>
+			</WrapPanel>
+			<WrapPanel>
+				<Label Content="hasło:" Padding="5" Margin="10" Width="100" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
+				<PasswordBox x:Name="NewPassword" Padding="5" Margin="0,10,10,10" MinWidth="150" BorderBrush="Black"/>
+			</WrapPanel>
+			<WrapPanel>
+				<Label Content="powtórz hasło:" Padding="5" Margin="10" Width="100" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
+				<PasswordBox x:Name="NewPassword2" Padding="5" Margin="0,10,10,10" MinWidth="150" BorderBrush="Black"/>
+			</WrapPanel>
+			<Label x:Name="KomNP" Content="" Padding="1" Margin="10,0,10,0" HorizontalAlignment="Center" FontSize="8" FontFamily="Maiandra GD" Foreground="#FFF90000"/>
+			<Button x:Name="buttonStworzKonto" Content="stwórz konto" Padding="5" HorizontalAlignment="Right" Margin="0" FontFamily="Maiandra GD" Background="White" Click="buttonStworzKonto_Click" BorderBrush="Black"/>
+		</StackPanel>
+		<StackPanel Grid.Column="1">
+			<Label Content="TestGenerator" HorizontalAlignment="Center" VerticalAlignment="Top" Height="72" FontSize="48" HorizontalContentAlignment="Center" FontFamily="Maiandra GD" Margin="10,0,10,10"/>
+		</StackPanel>
 	</Grid>
 </Window>
