--- a/test/Logowanie.xaml
+++ b/test/Logowanie.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test"
         mc:Ignorable="d"
-        Title="Logowanie" Height="335" Width="470" MinHeight="260" MinWidth="460" MaxHeight="500" MaxWidth="1000" Background="White" WindowStartupLocation="CenterScreen">
+        Title="Logowanie" Height="360" Width="470" MinHeight="260" MinWidth="460" MaxHeight="500" MaxWidth="1000" Background="White" WindowStartupLocation="CenterScreen">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="50*"></ColumnDefinition>
@@ -14,20 +14,24 @@
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="60"></RowDefinition>
-			<RowDefinition Height="160*" MinHeight="160"></RowDefinition>
-			<RowDefinition Height="20*"></RowDefinition>
+			<RowDefinition Height="auto" MinHeight="160"></RowDefinition>
 		</Grid.RowDefinitions>
-
-		<Button x:Name="buttonZaloguj" Content="zaloguj" Grid.Column="1" HorizontalAlignment="Left" Height="23" Grid.Row="1" VerticalAlignment="Top" Width="96" Margin="138,117,0,0" FontFamily="Maiandra GD" Click="buttonZaloguj_Click" Background="White" BorderBrush="Black"/>
-		<Button x:Name="buttonNowyProfil" Content="nowe konto" Grid.Column="1" HorizontalAlignment="Left" Height="23" Grid.Row="1" VerticalAlignment="Top" Width="96" Margin="138,151,0,0" FontFamily="Maiandra GD" Background="White" Click="buttonNowyProfil_Click" BorderBrush="Black"/>
-		<TextBox x:Name="TextLogin" Padding="4" HorizontalAlignment="Left" Height="25" Margin="108,17,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="158" Grid.Column="1" BorderBrush="Black" Background="White"/>
-		<PasswordBox x:Name="Password" Padding="4" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="108,61,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158"
-					 KeyDown="OnKeyDownHandler" BorderBrush="Black"/>
-		<Label Content="login:" HorizontalAlignment="Left" Height="25" Margin="48,17,0,0" Grid.Row="1" VerticalAlignment="Top" Width="49" Grid.Column="1" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
-		<Label Content="hasło:" Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="48,61,0,0" Grid.Row="1" VerticalAlignment="Top" Width="49" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
-		<Label x:Name="KomH" Content="" Grid.Column="1" HorizontalAlignment="Center" Height="23" Margin="102,91,92,0" Grid.Row="1" VerticalAlignment="Top" Width="158" FontSize="8" FontFamily="Maiandra GD" Foreground="#FFF90000"/>
-		<Label Content="TestGenerator" Grid.Column="1" HorizontalAlignment="Center" Height="72" VerticalAlignment="Top" Width="340" FontSize="48" HorizontalContentAlignment="Center" FontFamily="Maiandra GD" Margin="10,0,9,0" Grid.RowSpan="2"/>
-		<Button x:Name="buttonPubliczny" Content="konto publiczne" Grid.Column="1" HorizontalAlignment="Left" Height="23" Grid.Row="1" VerticalAlignment="Top" Width="96" Margin="138,185,0,0" FontFamily="Maiandra GD" Background="White" Click="buttonPubliczny_Click" BorderBrush="Black"/>
-
+		<StackPanel Grid.Column="1">
+			<Label Content="TestGenerator" HorizontalAlignment="Center" VerticalAlignment="Top" Height="72" FontSize="48" HorizontalContentAlignment="Center" FontFamily="Maiandra GD" Margin="10,0,10,10"/>
+		</StackPanel>
+		<StackPanel Grid.Column="1" Grid.Row="1">
+			<WrapPanel>
+				<Label Content="login:" Padding="5" Margin="10" Width="100" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
+				<TextBox x:Name="TextLogin" Padding="5" Margin="0,10,10,10" Text="" Width="150" BorderBrush="Black" Background="White"/>
+			</WrapPanel>
+			<WrapPanel>
+				<Label Content="hasło:" Padding="5" Margin="10" Width="100" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
+				<PasswordBox x:Name="Password" Padding="5" Margin="0,10,10,10" Width="150" KeyDown="OnKeyDownHandler" BorderBrush="Black"/>
+			</WrapPanel>
+			<Label x:Name="KomH" Content="" HorizontalAlignment="Center" Padding="5" Margin="40,0,0,0" FontSize="8" FontFamily="Maiandra GD" Foreground="#FFF90000"/>
+			<Button x:Name="buttonZaloguj" Content="zaloguj" Padding="5" Margin="40,10,10,10" Width="100" FontFamily="Maiandra GD" Click="buttonZaloguj_Click" Background="White" BorderBrush="Black"/>
+			<Button x:Name="buttonNowyProfil" Content="nowe konto" Width="100" Padding="5" Margin="40,10,10,10" FontFamily="Maiandra GD" Background="White" Click="buttonNowyProfil_Click" BorderBrush="Black"/>
+			<Button x:Name="buttonPubliczny" Content="konto publiczne" Width="100" Padding="5" Margin="40,10,10,10" FontFamily="Maiandra GD" Background="White" Click="buttonPubliczny_Click" BorderBrush="Black"/>
+		</StackPanel>
 	</Grid>
 </Window>
