--- a/test/Main2.xaml
+++ b/test/Main2.xaml
@@ -15,8 +15,34 @@
 			<RowDefinition Height="10*"/>
 		</Grid.RowDefinitions>
 		<Grid x:Name="Top" Grid.Row="0">
+			
 			<StackPanel>
-				<WrapPanel>
+			<DockPanel>
+				<Menu DockPanel.Dock="Top">
+						<MenuItem Header="_Plik">
+							<MenuItem Header="Nowy test"/>
+							<MenuItem Header="Otwórz test"/>
+							<MenuItem Header="Zapisz test"/>
+							<MenuItem x:Name="Exit" Header="Wyjście" Click="Exit_Click"/>
+						</MenuItem>
+						<MenuItem Header="_Ustawienia">
+							<MenuItem Header="Motyw">
+								<MenuItem Header="Biały"/>
+								<MenuItem Header="Czarny"/>
+								<MenuItem Header="Kolor"/>
+							</MenuItem>
+						</MenuItem>
+						<MenuItem Header="Profil">
+							<MenuItem Header="Zmień nazwę"/>
+							<MenuItem Header="Zmień hasło"/>
+							<MenuItem x:Name="Wyloguj" Header="Wyloguj" Click="Wyloguj_Click"/>
+						</MenuItem>
+
+					</Menu>
+			</DockPanel>
+			</StackPanel>
+			<StackPanel>
+				<WrapPanel HorizontalAlignment="Right">
 					<Label Content="zalogowany:" Padding="5" Margin="10,10,0,0"/>
 					<TextBlock x:Name="zalogowany" Padding="5" Margin="0,10,10,0" Text="konto publiczne"/>
 				</WrapPanel>
