--- a/test/NowyProfil.xaml
+++ b/test/NowyProfil.xaml
@@ -6,6 +6,20 @@
         xmlns:local="clr-namespace:test"
         mc:Ignorable="d"
         Title="Nowy Profil" Height="300" Width="470" MinHeight="260" MinWidth="460" MaxHeight="500" MaxWidth="1000" Background="White" WindowStartupLocation="CenterScreen">
+	<Window.Resources>
+			<Style TargetType="Button">
+			<Setter Property="BorderBrush" Value="Black" />
+			<Setter Property="Background" Value="White" />
+			<Setter Property="FontFamily" Value="Maiandra GD" />
+		</Style>
+		<Style TargetType="Label">
+			<Setter Property="FontFamily" Value="Maiandra GD" />
+		</Style>
+		<Style TargetType="TextBox">
+			<Setter Property="FontFamily" Value="Maiandra GD" />
+			<Setter Property="BorderBrush" Value="Black"/>
+		</Style>
+	</Window.Resources>
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="50*"></ColumnDefinition>
@@ -22,19 +36,19 @@
 		</StackPanel>
 		<StackPanel Grid.Column="1" Grid.Row="1">
 			<WrapPanel>
-				<Label Content="login:" Padding="5" Margin="10" Width="100" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
-				<TextBox x:Name="TextNLogin" Padding="5" Margin="0,10,10,10" MinWidth="150" BorderBrush="Black"/>
+				<Label Content="login:" Padding="5" Margin="10" Width="100" HorizontalContentAlignment="Right"/>
+				<TextBox x:Name="TextNLogin" Padding="5" Margin="0,10,10,10" MinWidth="150"/>
 			</WrapPanel>
 			<WrapPanel>
-				<Label Content="hasło:" Padding="5" Margin="10" Width="100" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
+				<Label Content="hasło:" Padding="5" Margin="10" Width="100" HorizontalContentAlignment="Right"/>
 				<PasswordBox x:Name="NewPassword" Padding="5" Margin="0,10,10,10" MinWidth="150" BorderBrush="Black"/>
 			</WrapPanel>
 			<WrapPanel>
-				<Label Content="powtórz hasło:" Padding="5" Margin="10" Width="100" FontFamily="Maiandra GD" HorizontalContentAlignment="Right"/>
+				<Label Content="powtórz hasło:" Padding="5" Margin="10" Width="100" HorizontalContentAlignment="Right"/>
 				<PasswordBox x:Name="NewPassword2" Padding="5" Margin="0,10,10,10" MinWidth="150" BorderBrush="Black"/>
 			</WrapPanel>
-			<Label x:Name="KomNP" Content="" Padding="1" Margin="10,0,10,0" HorizontalAlignment="Center" FontSize="8" FontFamily="Maiandra GD" Foreground="#FFF90000"/>
-			<Button x:Name="buttonStworzKonto" Content="stwórz konto" Padding="5" HorizontalAlignment="Right" Margin="0" FontFamily="Maiandra GD" Background="White" Click="buttonStworzKonto_Click" BorderBrush="Black"/>
+			<Label x:Name="KomNP" Content="" Padding="1" Margin="10,0,10,0" HorizontalAlignment="Center" FontSize="8" Foreground="#FFF90000"/>
+			<Button x:Name="buttonStworzKonto" Content="stwórz konto" Padding="5" HorizontalAlignment="Right" Margin="0"  Click="buttonStworzKonto_Click"/>
 		</StackPanel>
 	</Grid>
 </Window>
